---
source: tui/src/chatwidget/tests.rs
assertion_line: 728
expression: terminal.backend()
---
"? Smarty wants to run echo hello world                                           "
"                                                                                "
"Model wants to run a command                                                    "
"                                                                                "
"▌Allow command?                                                                 "
"▌ Yes   Always   No, provide feedback                                           "
"▌ Approve and run the command                                                   "
"                                                                                "
